# LearningBasedPhotometricStereo

./: LearningBasedPhotometricStereo.sln  README.md
LearningBasedPhotometricStereo/: CMakeLists.txt  LearningBasedPhotometricStereo.vcxproj  LearningBasedPhotometricStereo.vcxproj.filters  ReadMe.txt  common.h  execution.sh  execution2.sh  ifttt.sh  learning_based_photometric_stereo.cpp  learning_based_photometric_stereo.h  main.cpp  stdafx.cpp  stdafx.h  utility.cpp  utility.h  utility_photometric_stereo.cpp  utility_photometric_stereo.h
data/option/: filelist3.txt  filelist96.txt  light_directions0.txt  light_directions1.txt  light_directions10.txt  light_directions11.txt  light_directions12.txt  light_directions13.txt  light_directions14.txt  light_directions15.txt  light_directions16.txt  light_directions17.txt  light_directions18.txt  light_directions19.txt  light_directions2.txt  light_directions20.txt  light_directions21.txt  light_directions22.txt  light_directions23.txt  light_directions24.txt  light_directions25.txt  light_directions26.txt  light_directions27.txt  light_directions28.txt  light_directions29.txt  light_directions3.txt  light_directions30.txt  light_directions31.txt  light_directions32.txt  light_directions33.txt  light_directions34.txt  light_directions35.txt  light_directions36.txt  light_directions37.txt  light_directions38.txt  light_directions39.txt  light_directions4.txt  light_directions40.txt  light_directions41.txt  light_directions42.txt  (+62 more)
